duck erin gefietst

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Let's rubberduck shall we</p>
   </header>
   <article>
-    <a href="page2.html" class="button">Klik me!</a>
+    <a href="duck/ducky.html" class="button">Klik me!</a>
   </article>
 </body>
 </html>
