--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
   <header>
-    <h1>Welcome</h1>
-    <p>Let's rubberduck shall we</p>
+    <h1>TestTuin</h1>
+    <p>To duck or not to duck, that's the question</p>
   </header>
   <article>
-    <a href="duck/ducky.html" class="button">Klik me!</a>
+    <a href="#one">One</a>
+
+    <p id="one"></p>
+    <p id="two"></p>
   </article>
 </body>
 </html>
